Replace getFirst() with get(0) for compatibility